--- a/Car Detection YOLO.ipynb
+++ b/Car Detection YOLO.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import argparse\n",
     "import os\n",
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,23 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"random_normal_1:0\", shape=(19, 19, 5, 4), dtype=float32) Tensor(\"GreaterEqual:0\", shape=(19, 19, 5), dtype=bool)\n",
-      "scores[2] = 10.750582\n",
-      "boxes[2] = [ 8.426533   3.2713668 -0.5313436 -4.9413733]\n",
-      "classes[2] = 7\n",
-      "scores.shape = (None,)\n",
-      "boxes.shape = (None, 4)\n",
-      "classes.shape = (None,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.compat.v1.Session() as test_a:\n",
     "    box_confidence = tf.random.normal([19, 19, 5, 1], mean=1, stddev=4, seed = 1)\n",
@@ -122,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,22 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "scores[2] = 6.938395\n",
-      "boxes[2] = [-5.299932    3.1379814   4.450367    0.95942086]\n",
-      "classes[2] = -2.2452729\n",
-      "scores.shape = (10,)\n",
-      "boxes.shape = (10, 4)\n",
-      "classes.shape = (10,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.compat.v1.Session() as test_b:\n",
     "    scores = tf.random.normal([54,], mean=1, stddev=4, seed = 1)\n",
@@ -199,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,25 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"concat:0\", shape=(19, 19, 5, 4), dtype=float32)\n",
-      "-\n",
-      "Tensor(\"concat:0\", shape=(19, 19, 5, 4), dtype=float32) Tensor(\"GreaterEqual_1:0\", shape=(19, 19, 5), dtype=bool)\n",
-      "scores[2] = 138.79124\n",
-      "boxes[2] = [1292.3297  -278.52167 3876.9893  -835.56494]\n",
-      "classes[2] = 54\n",
-      "scores.shape = (10,)\n",
-      "boxes.shape = (10, 4)\n",
-      "classes.shape = (10,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.compat.v1.Session() as test_b:\n",
     "    yolo_outputs = (tf.random.normal([19, 19, 5, 1], mean=1, stddev=4, seed = 1),\n",
@@ -284,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,39 +271,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:OMP_NUM_THREADS is no longer used by the default Keras config. To configure the number of threads, use tf.config.threading APIs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sess = K.get_session()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'model_data/coco_classes.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-2f38cbc55594>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclass_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_classes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"model_data/coco_classes.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0manchors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_anchors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"model_data/yolo_anchors.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mimage_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m720.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1280.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/car-detection/yolo_utils.py\u001b[0m in \u001b[0;36mread_classes\u001b[0;34m(classes_path)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mread_classes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclasses_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclasses_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mclass_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mclass_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclass_names\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'model_data/coco_classes.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_names = read_classes(\"model_data/coco_classes.txt\")\n",
     "anchors = read_anchors(\"model_data/yolo_anchors.txt\")\n",
@@ -366,7 +294,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "yolo_model = load_model(\"model_data/yolo.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yolo_outputs = yolo_head(yolo_model.output, anchors, len(class_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores, boxes, classes = yolo_eval(yolo_outputs, image_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(sess, image_file):\n",
+    "    \"\"\"\n",
+    "    Runs the graph stored in \"sess\" to predict boxes for \"image_file\". Prints and plots the preditions.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    sess -- your tensorflow/Keras session containing the YOLO graph\n",
+    "    image_file -- name of an image stored in the \"images\" folder.\n",
+    "    \n",
+    "    Returns:\n",
+    "    out_scores -- tensor of shape (None, ), scores of the predicted boxes\n",
+    "    out_boxes -- tensor of shape (None, 4), coordinates of the predicted boxes\n",
+    "    out_classes -- tensor of shape (None, ), class index of the predicted boxes\n",
+    "    \n",
+    "    Note: \"None\" actually represents the number of predicted boxes, it varies between 0 and max_boxes. \n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Preprocess your image\n",
+    "    image, image_data = preprocess_image(\"images/\" + image_file, model_image_size = (608, 608))\n",
+    "\n",
+    "    # Run the session with the correct tensors and choose the correct placeholders in the feed_dict.\n",
+    "    # You'll need to use feed_dict={yolo_model.input: ... , K.learning_phase(): 0})\n",
+    "    ### START CODE HERE ### (≈ 1 line)\n",
+    "    out_scores, out_boxes, out_classes = sess.run([scores, boxes, classes], feed_dict={yolo_model.input: image_data, K.learning_phase(): 0})\n",
+    "    ### END CODE HERE ###\n",
+    "\n",
+    "    # Print predictions info\n",
+    "    print('Found {} boxes for {}'.format(len(out_boxes), image_file))\n",
+    "    # Generate colors for drawing bounding boxes.\n",
+    "    colors = generate_colors(class_names)\n",
+    "    # Draw bounding boxes on the image file\n",
+    "    draw_boxes(image, out_scores, out_boxes, out_classes, class_names, colors)\n",
+    "    # Save the predicted bounding box on the image\n",
+    "    image.save(os.path.join(\"out\", image_file), quality=90)\n",
+    "    # Display the results in the notebook\n",
+    "    output_image = scipy.misc.imread(os.path.join(\"out\", image_file))\n",
+    "    imshow(output_image)\n",
+    "    \n",
+    "    return out_scores, out_boxes, out_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_scores, out_boxes, out_classes = predict(sess, \"test.jpg\")"
+   ]
   }
  ],
  "metadata": {
